# skynet

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  main.cpp  tests.sh
core/: main.cpp
core/node/: README.md  base_miner.cpp  base_miner.hpp  node.hpp  node_except.hpp
docs/: README.md  config.md  index.html  node.md  running_a_node.md  seed_servers.md
installer/: installer.py
lib/: libsecp256k1.2.dylib
lib/secp256k1/: libsecp256k1.so.2
servers/: README.md
servers/discovery/: main.go
src/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  common.hpp  consensus.hpp  ipc.cpp  ipc.hpp  logger.cpp  logger.hpp  macros.hpp  mempool.cpp  mempool.hpp  merkle_tree.cpp  merkle_tree.hpp  node.hpp  ntp-server-list.txt  ntp.cpp  ntp.hpp  time.cpp  time.hpp  transaction.hpp  types.hpp  util.hpp  wallet.hpp
src/crypto/: aes.cpp  aes.hpp  base58check.cpp  base58check.hpp  bip39.cpp  bip39.hpp  ecdsa.cpp  ecdsa.hpp  random.hpp  sha256.cpp  sha256.hpp  util.hpp  uuidv4.hpp
src/crypto/ecdsa/: ecdsa.cpp  ecdsa.hpp
src/crypto/sha256/: sha256.cpp  sha256.hpp
src/io/: config_parser.cpp  config_parser.hpp  file.cpp  file.hpp  stdin.hpp  stdout.hpp  threadsafe_logger.cpp  threadsafe_logger.hpp
src/json/: README.md
src/net/: client.cpp  client.hpp  common.hpp  httpserver.cpp  httpserver.hpp  net.hpp  packet.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/node/: base_miner.cpp  base_miner.hpp  node.hpp
src/rpc/: README.md  json_rpc.hpp
src/secp256k1/: README.md  secp256k1_recovery.h
src/secp256k1/src/: bench.c  bench_ecmult.c  bench_internal.c  precompute_ecmult.c  precompute_ecmult_gen.c  secp256k1.c  tests.c  tests_exhaustive.c  valgrind_ctime_test.c
src/secp256k1/src/modules/ecdh/: main_impl.h
src/secp256k1/src/modules/extrakeys/: main_impl.h  tests_exhaustive_impl.h  tests_impl.h
src/secp256k1/src/modules/recovery/: main_impl.h  tests_exhaustive_impl.h
src/secp256k1/src/modules/schnorrsig/: bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
src/threading/: blocking_queue.hpp  mtx.hpp  threadpool.cpp  threadpool.hpp
src/util/: map.hpp
test/: CMakeLists.txt  README.md  ecdsa_test.hpp  io_test.hpp  main.cpp  sha256_test.hpp  unipp.hpp
